  as a theme attribute, made ATK support a page.tpl, which is a general template
  to render a page in. [Boy]
* Made login page use login.css if available and made login form more 
  XHTML compliant. [Boy]
* Added loadDispatch method to atkNode, which loads the output in atkOutput
  but doesn't actually flush anything and make it support a dispatch.tpl
  template if available. [Boy]
- Temporarily removed the 'generate title row' checkbox in atkExportHandler as
  it isn't yet implemented. [Guido]
- Removed default theme's action_view.tpl as it basically is no difference 
  than the default action.tpl. [Ivo]

Changed in ATK 5.6
------------------
+ Added phpmail extension, now you can easily create html mails even with
  attachments through an mail object. [Dennis-Jan]
+ Changed atkFckAttribute's HTML based resourcemanager into a PHP based
  version to support themes [Wim]
+ Added ajax powered smart search functionality for performing arbitraty
  searches on any node. [Peter]
+ Added atkMessageQueue class for adding user notification messages. [Patrick]
+ Added atkMlWrapper for turning any attribute into an internationalisation
  enabled attribute. [Ivo]
+ Added atkCalculatorAttribute for adding columns with calculated values.
  [Ivo]
+ Added atkShuttleRelation. [Ivo]
+ Added atkRowCounter for sequentially numbering rows. [Ivo, Przemek, JorgeG]
+ Added atkUrlAttribute for representing urls in the database. (bug #604)
  [Przemek]
+ Added atkUpdatedByAttribute for keeping track of which user has modified a
  record. (bug #457) [Yury, Ivo]
+ Added 'macoslike' theme. [Marcel]
+ Added 't3skin' theme (Typo3 style). [Ivo]
+ Added setText method to atkLanguage. [Sandy]
+ Added atkMailer class for sending html mails (uses phpMailer software).
  [Peter, Dennis-Jan]
+ Added atkPluginTestCase class for easier testing of Smarty plugins. [Ivo]
+ Added support for row and col spans in the atkTableRenderer. [Sandy]